Mobile View spacing issue resolved changes

--- a/scss/main.css
+++ b/scss/main.css
@@ -3568,11 +3568,13 @@ h2 {
     .modal.in .modal-dialog5 .modal-content {
       padding: 60px 20px 30px; } }
 
-.bannerSec2 p {
-  color: rgba(255, 255, 255, 0.9);
-  margin-bottom: 25px;
-  line-height: 125%; }
+@media all and (max-width: 920px) {
+  .bannerSec {
+    margin-top: 300px; } }
 
+@media all and (max-width: 920px) {
+  .bannerSec1 {
+    margin-top: 260px; } }
 .bannerSec1 h4 {
   margin-bottom: 15px; }
   @media all and (max-width: 1400px) {
@@ -3583,6 +3585,17 @@ h2 {
   margin-bottom: 25px;
   line-height: 125%; }
 
+@media all and (max-width: 920px) {
+  .bannerSec2 {
+    margin-top: 220px; } }
+.bannerSec2 p {
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 25px;
+  line-height: 125%; }
+
+@media all and (max-width: 920px) {
+  .serviceSec {
+    margin-top: 200px; } }
 .serviceSec .serviceSlider {
   display: block;
   margin-left: -15px; }
@@ -3723,6 +3736,9 @@ h2 {
       height: 530px;
       margin-bottom: 20px; } }
 
+@media all and (max-width: 920px) {
+  .teamSection {
+    margin-top: 200px; } }
 .teamSection .teamSec {
   display: flex;
   justify-content: space-between; }
@@ -3795,6 +3811,9 @@ h2 {
     .teamSection .teamMembers a {
       padding: 36px 0px; } }
 
+@media all and (max-width: 920px) {
+  .clientsBox {
+    margin-top: 200px; } }
 .clientsBox ul {
   list-style: none; }
 .clientsBox .clientSec {
@@ -3930,6 +3949,9 @@ h2 {
 
 .testimonialsSec {
   overflow: hidden !important; }
+  @media all and (max-width: 920px) {
+    .testimonialsSec {
+      margin-top: 200px; } }
   .testimonialsSec .testimonialsSlider {
     margin: 0 -70px; }
     .testimonialsSec .testimonialsSlider .slick-slide {
@@ -4026,6 +4048,9 @@ h2 {
       .testimonialsSec .sliderArrow .imgtestBackarrow {
         margin-right: 50px; } }
 
+@media all and (max-width: 920px) {
+  .caseStudies {
+    margin-top: 200px; } }
 .caseStudies .boxcaseStudy .contentThree {
   margin: 0px 60px 0px 0px;
   padding: 10px 0px;
@@ -4095,7 +4120,7 @@ h2 {
 
 @media all and (max-width: 920px) {
   .contactSec {
-    margin-top: 40px; } }
+    margin-top: 200px; } }
 .contactSec .contactBox {
   display: flex;
   justify-content: space-between;
@@ -4935,7 +4960,6 @@ footer .footerSec .footerSub .quickLinksft {
       .legalAdvisory .sectionTitle .breadcrumbs {
         display: none; } }
     .legalAdvisory .sectionTitle .breadcrumbs .breadcrumbs-link {
-      padding: 0px 5px;
       text-decoration: none;
       color: #6A6A6A;
       vertical-align: middle;
@@ -5073,7 +5097,7 @@ footer .footerSec .footerSub .quickLinksft {
       @media all and (max-width: 575px) {
         .advisorySubPages .subpageContent .subSectionTitle .backArrow {
           display: block;
-          margin-top: 9px; } }
+          margin-top: 12.5px; } }
       .advisorySubPages .subpageContent .subSectionTitle .backArrow img {
         margin-right: 30px; }
         @media all and (max-width: 920px) {
@@ -5087,7 +5111,6 @@ footer .footerSec .footerSub .quickLinksft {
         .advisorySubPages .subpageContent .subSectionTitle .breadcrumbs {
           display: none; } }
       .advisorySubPages .subpageContent .subSectionTitle .breadcrumbs .breadcrumbs-link {
-        padding: 0px 5px;
         text-decoration: none;
         color: #6A6A6A;
         vertical-align: middle;
@@ -5211,7 +5234,6 @@ footer .footerSec .footerSub .quickLinksft {
       .digitalTransformation .sectionTitle .breadcrumbs {
         display: none; } }
     .digitalTransformation .sectionTitle .breadcrumbs .breadcrumbs-link {
-      padding: 0px 5px;
       text-decoration: none;
       color: #6A6A6A;
       vertical-align: middle;
@@ -5353,7 +5375,7 @@ footer .footerSec .footerSub .quickLinksft {
       @media all and (max-width: 575px) {
         .digitalTransformationSubPages .subpageContent .subSectionTitle .backArrow {
           display: block;
-          margin-top: 9px; } }
+          margin-top: 12.5px; } }
       .digitalTransformationSubPages .subpageContent .subSectionTitle .backArrow img {
         margin-right: 30px; }
         @media all and (max-width: 920px) {
@@ -5367,7 +5389,6 @@ footer .footerSec .footerSub .quickLinksft {
         .digitalTransformationSubPages .subpageContent .subSectionTitle .breadcrumbs {
           display: none; } }
       .digitalTransformationSubPages .subpageContent .subSectionTitle .breadcrumbs .breadcrumbs-link {
-        padding: 0px 5px;
         text-decoration: none;
         color: #6A6A6A;
         vertical-align: middle;
@@ -5493,7 +5514,6 @@ footer .footerSec .footerSub .quickLinksft {
         .generalCounsel .subpageContent .sectionTitle .breadcrumbs {
           display: none; } }
       .generalCounsel .subpageContent .sectionTitle .breadcrumbs .breadcrumbs-link {
-        padding: 0px 5px;
         text-decoration: none;
         color: #6A6A6A;
         vertical-align: middle;
@@ -5614,7 +5634,6 @@ footer .footerSec .footerSub .quickLinksft {
         .legalAudit .subpageContent .sectionTitle .breadcrumbs {
           display: none; } }
       .legalAudit .subpageContent .sectionTitle .breadcrumbs .breadcrumbs-link {
-        padding: 0px 5px;
         text-decoration: none;
         color: #6A6A6A;
         vertical-align: middle;
@@ -5943,7 +5962,6 @@ footer .footerSec .footerSub .quickLinksft {
         .subSectors .subpageContent .sectionTitle .breadcrumbs {
           display: none; } }
       .subSectors .subpageContent .sectionTitle .breadcrumbs .breadcrumbs-link {
-        padding: 0px 5px;
         text-decoration: none;
         color: #6A6A6A;
         vertical-align: middle;
