--- a/scss/pages/_branding.scss
+++ b/scss/pages/_branding.scss
@@ -4,9 +4,6 @@ progress {
     top: 15px;
 }
 
-
-
-
 #fp-nav ul li a span {
     background-color: #fff !important;
 }
@@ -1587,15 +1584,17 @@ h2 {
 }
 
 
-.bannerSec2 {
-    p {
-        color: rgba(255, 255, 255, 0.9);
-        margin-bottom: 25px;
-        line-height: 125%;
+.bannerSec{
+    @media all and(max-width:920px){
+        margin-top: 300px;
     }
 }
 
 .bannerSec1 {
+
+    @media all and(max-width:920px){
+        margin-top: 260px;
+    }
 
     h4 {
         margin-bottom: 15px;
@@ -1612,7 +1611,23 @@ h2 {
     }
 }
 
+.bannerSec2 {
+    @media all and(max-width:920px){
+        margin-top: 220px;
+    }
+    p {
+        color: rgba(255, 255, 255, 0.9);
+        margin-bottom: 25px;
+        line-height: 125%;
+    }
+}
+
+
+
 .serviceSec {
+    @media all and(max-width:920px){
+        margin-top: 200px;
+    }
     .serviceSlider {
         display: block;
         margin-left: -15px;
@@ -1855,8 +1870,10 @@ h2 {
     }
 }
 
-
 .teamSection {
+    @media all and(max-width:920px){
+        margin-top: 200px;
+    }
     .teamSec {
         display: flex;
         justify-content: space-between;
@@ -1976,12 +1993,10 @@ h2 {
     }
 }
 
-
-
-
-
-
 .clientsBox {
+    @media all and(max-width:920px){
+        margin-top: 200px;
+    }
     ul {
         list-style: none;
     }
@@ -2204,8 +2219,10 @@ h2 {
 
 }
 
-
 .testimonialsSec {
+    @media all and(max-width:920px){
+        margin-top: 200px;
+    }
     overflow: hidden !important;
 
     .testimonialsSlider {
@@ -2366,9 +2383,10 @@ h2 {
     }
 }
 
-
-
 .caseStudies {
+    @media all and(max-width:920px){
+        margin-top: 200px;
+    }
 
     .boxcaseStudy {
 
@@ -2487,10 +2505,9 @@ h2 {
     
 }
 
-
 .contactSec {
-    @media all and (max-width: 920px) {
-        margin-top: 40px;
+    @media all and(max-width:920px){
+        margin-top: 200px;
     }
 
     .contactBox {
