--- a/scss/pages/_sub_sectors.scss
+++ b/scss/pages/_sub_sectors.scss
@@ -56,7 +56,6 @@
             }
             padding-bottom: 25px;
             .breadcrumbs-link{
-             padding: 0px 5px;
              text-decoration: none;
              color: #6A6A6A;
              vertical-align: middle;
